<resources>
    <string name="app_name">TaoBaoUnion</string>
    <string name="text_home">首页</string>
    <string name="text_selected">精选</string>
    <string name="text_red_packet">特惠</string>
    <string name="text_search">搜索</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_logo">SOB</string>
    <string name="text_edit_hint">搜你想搜的宝贝</string>
    <string name="text_network_tip_error">网络错误，请点击重试...</string>
    <string name="text_goods_off_prise">省%1$d元</string>
    <string name="text_goods_original_price">￥%1$s</string>
    <string name="text_goods_number">%d人已购买</string>
    <string name="text_ticker_title">淘宝口令</string>
    <string name="text_ticker_btn">领劵</string>
    <string name="text_loading_tip">正在拼命加载中...</string>
    <string name="text_selected_title">精选宝贝</string>
</resources>
