<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.TestActivity">

    <FrameLayout
        android:id="@+id/main_page_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <View
        android:layout_above="@+id/navBar"
        android:layout_marginBottom="10dp"
        android:background="@color/colorGrey"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <RadioGroup
        android:id="@+id/navBar"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/home"
            android:checked="true"
            android:gravity="center"
            android:textColor="@drawable/navigation_bar_color"
            android:button="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/selector_navigation_home"
            android:text="@string/text_home"/>

        <RadioButton
            android:id="@+id/selected"
            android:gravity="center"
            android:textColor="@drawable/navigation_bar_color"
            android:button="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/selector_navigation_selected"
            android:text="@string/text_selected"/>

        <RadioButton
            android:id="@+id/red_packet"
            android:gravity="center"
            android:textColor="@drawable/navigation_bar_color"
            android:button="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/selector_navigation_red_packet"
            android:text="@string/text_red_packet"/>

        <RadioButton
            android:id="@+id/search"
            android:gravity="center"
            android:textColor="@drawable/navigation_bar_color"
            android:button="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/selector_navigation_search"
            android:text="@string/text_search"/>

    </RadioGroup>

</RelativeLayout>